--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,22 +3,22 @@
     <string name="title_activity_home">Home</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_notifications">Notificações</string>
 
-    <string name="action_sign_in_short">Register</string>
+    <string name="action_sign_in_short">Registrar</string>
     <string name="email">Email</string>
-    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
-    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
-    <string name="change_email">Change Email</string>
-    <string name="change_password">Change Password</string>
-    <string name="send_password_reset_email">Send Password reset email</string>
-    <string name="remove_user">Remove user</string>
-    <string name="new_pass">New Password</string>
+    <string name="minimum_password">Senha muito curta, digite no minimo 6 caracteres! </string>
+    <string name="auth_failed">Falha na autenticação, verifique seu email e a senha ou cadastre-se</string>
+    <string name="change_email">Mudar Email</string>
+    <string name="change_password">Mudar Senha</string>
+    <string name="send_password_reset_email">Enviar senha resetar email</string>
+    <string name="remove_user">Remover usuario</string>
+    <string name="new_pass">Nova Senha</string>
     <string name="title_activity_profile">Firebase</string>
-    <string name="title_activity_login">Sign in</string>
+    <string name="title_activity_login">Logar</string>
     <string name="hint_email">Email</string>
-    <string name="hint_password">Password</string>
-    <string name="hint_name">Fullname</string>
+    <string name="hint_password">Senha</string>
+    <string name="hint_name">Nome completo</string>
     <string name="btn_login">LOGIN</string>
     <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
     <string name="btn_link_to_login">Already registered. Login Me!</string>
