--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="hint_email">Email</string>
     <string name="hint_password">Senha</string>
     <string name="hint_name">Nome completo</string>
-    <string name="btn_login">LOGIN</string>
+    <string name="btn_login">Entrar</string>
     <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
     <string name="btn_link_to_login">Already registered. Login Me!</string>
     <string name="title_activity_reset_password">ResetPasswordActivity</string>
